syntax = "proto3";

package user_auth;

service UserAuthService {
  rpc Register(RegisterRequest) returns (UserReply);
  rpc Login(LoginRequest) returns (LoginReply);
  rpc GetUserPublicKey(GetPublicKeyRequest) returns (GetPublicKeyReply);
  // 新增：通过智能账户地址查询EOA地址
  rpc GetEOABySmartAccount(GetEOARequest) returns (GetEOAReply);
  // 新增：批量查询EOA地址
  rpc BatchGetEOABySmartAccounts(BatchGetEOARequest) returns (BatchGetEOAReply);
}

message RegisterRequest {
  string id_card_number = 1;
  string phone_number = 2;
  string email = 3;
  string eoa_address = 4;        // EOA地址,用于签名
  string smart_account = 5;      // 智能合约账户地址
}

message LoginRequest {
  string login_time = 1; // ISO 8601 format string
  string signature = 2;
}

message User {
    string eoa_address = 1;        // EOA地址
    string smart_account = 2;      // 智能合约账户地址
    string u_id = 3;
    string username = 4;
    repeated string roles = 5;
}

message UserReply {
  User user = 1;
}

message LoginReply {
  string token = 1;
  User user = 2;
}

message GetPublicKeyRequest {
  string smart_account = 1;  // 智能合约账户地址
}

message GetPublicKeyReply {
  string smart_account = 1;
  string encryption_public_key = 2;
  string encryption_key_updated_at = 3;
}

// 新增：通过智能账户地址查询EOA地址的请求
message GetEOARequest {
  string smart_account = 1;  // 智能账户地址
}

// 新增：通过智能账户地址查询EOA地址的响应
message GetEOAReply {
  string smart_account = 1;  // 智能账户地址
  string eoa_address = 2;    // EOA地址
  bool found = 3;            // 是否找到
}

// 新增：批量查询EOA地址的请求
message BatchGetEOARequest {
  repeated string smart_accounts = 1;  // 智能账户地址数组
}

// 新增：批量查询EOA地址的响应
message BatchGetEOAReply {
  repeated EOAMapping mappings = 1;  // EOA映射数组
  int32 total = 2;                   // 总数
  int32 found = 3;                   // 找到的数量
}

// 新增：EOA映射结构
message EOAMapping {
  string smart_account = 1;  // 智能账户地址
  string eoa_address = 2;    // EOA地址
  bool found = 3;            // 是否找到
}
