/**
 * å®‰å…¨äº¤æ¢æœåŠ¡ç«¯åˆ°ç«¯æµ‹è¯•è„šæœ¬ï¼ˆåŸºäºé¢„æ³¨å†Œå…¬é’¥ï¼‰
 * 
 * æµ‹è¯•åœºæ™¯ï¼šåŒ»ç”Ÿå‘è€äººå‘é€åŠ å¯†çš„æœè¯è®¡åˆ’
 * 
 * ç®€åŒ–æµç¨‹ï¼ˆæ— éœ€ä¼šè¯åå•†ï¼‰ï¼š
 * 0. ç”¨æˆ·ç™»å½•è·å– Token
 * 1. å»ºç«‹ WebSocket è¿æ¥
 * 2. åŒ»ç”Ÿè·å–è€äººçš„é¢„æ³¨å†Œå…¬é’¥å¹¶å‘é€åŠ å¯†æ¶ˆæ¯
 * 3. è€äººè·å–å¾…å¤„ç†çš„åŠ å¯†æ¶ˆæ¯
 * 4. è€äººè§£å¯†å¹¶ç¡®è®¤æ”¶åˆ°æ¶ˆæ¯
 * 5. æµ‹è¯•æ‘˜è¦
 * 
 * è¿è¡Œæ–¹å¼ï¼š
 * - node tests/e2e-secure-exchange-flow.test.js
 * - éœ€è¦å…ˆè¿è¡Œï¼šnode tests/setup-test-users.jsï¼ˆé¦–æ¬¡ï¼‰
 * 
 * å‰ç½®æ¡ä»¶ï¼š
 * - API Gateway è¿è¡Œåœ¨ http://localhost:3000
 * - Secure Exchange Service è¿è¡Œåœ¨ http://localhost:3007
 * - User Service è¿è¡Œåœ¨ http://localhost:3001ï¼ˆæä¾›å…¬é’¥æŸ¥è¯¢ gRPCï¼‰
 * - PostgreSQL æ•°æ®åº“å·²åˆå§‹åŒ–
 * - Redis å·²å¯åŠ¨
 * - RabbitMQ å·²å¯åŠ¨
 */

const axios = require('axios');
const WebSocket = require('ws');
const { ethers } = require('ethers');
const crypto = require('crypto');
const { loadTestData, validateTestData, testDataExists } = require('./utils/test-data-manager');

// ==================== é…ç½® ====================

const BASE_URL = process.env.API_BASE_URL || 'http://localhost:3000';
const WS_URL = process.env.WS_BASE_URL || 'ws://localhost:3000';

// ==================== æµ‹è¯•æ•°æ®å­˜å‚¨ ====================

const testData = {
  elder: {
    eoaAddress: null, // EOA åœ°å€ï¼ˆç”¨äºç™»å½•ï¼‰
    eoaPrivateKey: null, // EOA ç§é’¥ï¼ˆç”¨äºç­¾åç™»å½•å’Œ ECIES åŠ å¯†ï¼‰
    smartAccount: null, // Smart Account åœ°å€
    token: null, // ç™»å½•åçš„ JWT token
    wsConnection: null,
    receivedMessages: [],
    // ç”¨äº ECIES çš„å¯†é’¥ï¼ˆä½¿ç”¨ EOA å¯†é’¥å¯¹ï¼‰
    publicKey: null, // å‹ç¼©å…¬é’¥ï¼ˆ33å­—èŠ‚ï¼‰
    privateKey: null, // ç§é’¥ï¼ˆä¸ eoaPrivateKey ç›¸åŒï¼‰
  },
  doctor: {
    eoaAddress: null,
    eoaPrivateKey: null,
    smartAccount: null,
    token: null,
    wsConnection: null,
    receivedMessages: [],
    // ç”¨äº ECIES çš„å¯†é’¥ï¼ˆä½¿ç”¨ EOA å¯†é’¥å¯¹ï¼‰
    publicKey: null,
    privateKey: null,
  },
  messages: [], // å­˜å‚¨å‘é€çš„æ¶ˆæ¯
};

// ==================== æ—¥å¿—å·¥å…· ====================

const colors = {
  reset: '\x1b[0m', bright: '\x1b[1m', green: '\x1b[32m',
  red: '\x1b[31m', yellow: '\x1b[33m', blue: '\x1b[34m', 
  cyan: '\x1b[36m', magenta: '\x1b[35m'
};

function log(message, color = 'reset') {
  console.log(`${colors[color]}${message}${colors.reset}`);
}

function logSuccess(step, message) {
  log(`âœ… [${step}] ${message}`, 'green');
}

function logError(step, message) {
  log(`âŒ [${step}] ${message}`, 'red');
}

function logInfo(message) {
  log(`â„¹ï¸  ${message}`, 'cyan');
}

function logStep(step) {
  log(`\n${'='.repeat(70)}`, 'blue');
  log(`ğŸ“ ${step}`, 'bright');
  log('='.repeat(70), 'blue');
}

function logWarning(message) {
  log(`âš ï¸  ${message}`, 'yellow');
}

function sleep(ms) {
  return new Promise(resolve => setTimeout(resolve, ms));
}

// ==================== HTTP è¯·æ±‚å°è£… ====================

async function apiRequest(method, path, data = null, token = null) {
  try {
    const config = {
      method,
      url: `${BASE_URL}${path}`,
      headers: { 'Content-Type': 'application/json' },
      timeout: 10000
    };

    if (token) {
      config.headers['Authorization'] = `Bearer ${token}`;
    }

    if (data) {
      config.data = data;
    }

    console.log(`ğŸ”„ [API Request] ${method} ${config.url}`);
    if (data && Object.keys(data).length < 5) {
      // åªæ‰“å°ç®€çŸ­çš„æ•°æ®ï¼Œé¿å…æ‰“å°åŠ å¯†å†…å®¹
      console.log(`ğŸ“¤ [Request Data]`, JSON.stringify(data, null, 2));
    }

    const response = await axios(config);
    console.log(`âœ… [API Response] ${response.status} ${method} ${path}`);
    return { success: true, data: response.data };
  } catch (error) {
    console.log(`âŒ [API Error] ${method} ${path}:`, error.message);
    if (error.response) {
      console.log(`ğŸ“¥ [Error Response]`, error.response.data);
    }
    return {
      success: false,
      error: error.response?.data || error.message,
      status: error.response?.status
    };
  }
}

// ==================== åŠ å¯†å·¥å…·ï¼ˆECIES ç®€åŒ–ç‰ˆï¼‰====================

/**
 * ä½¿ç”¨å¯¹æ–¹çš„å…¬é’¥æ´¾ç”Ÿå…±äº«å¯†é’¥
 * @param {string} privateKey - è‡ªå·±çš„ç§é’¥
 * @param {string} peerPublicKey - å¯¹æ–¹çš„å…¬é’¥ï¼ˆå‹ç¼©æ ¼å¼ï¼‰
 * @returns {Buffer} å…±äº«å¯†é’¥
 */
function deriveSharedSecret(privateKey, peerPublicKey) {
  const wallet = new ethers.Wallet(privateKey);
  const sharedPoint = wallet.signingKey.computeSharedSecret(peerPublicKey);
  // ä½¿ç”¨ SHA256 å“ˆå¸Œå…±äº«ç‚¹ä½œä¸ºå¯¹ç§°å¯†é’¥
  return crypto.createHash('sha256').update(Buffer.from(sharedPoint.slice(2), 'hex')).digest();
}

/**
 * åŠ å¯†æ•°æ®ï¼ˆAES-256-GCMï¼‰
 * @param {string} plaintext - æ˜æ–‡
 * @param {Buffer} sharedSecret - å…±äº«å¯†é’¥
 * @returns {string} åŠ å¯†æ•°æ®ï¼ˆhexæ ¼å¼ï¼‰
 */
function encrypt(plaintext, sharedSecret) {
  const iv = crypto.randomBytes(12); // GCM æ¨è 12 å­—èŠ‚ IV
  const cipher = crypto.createCipheriv('aes-256-gcm', sharedSecret, iv);
  
  let encrypted = cipher.update(plaintext, 'utf8', 'hex');
  encrypted += cipher.final('hex');
  
  const authTag = cipher.getAuthTag().toString('hex');
  
  // è¿”å›æ ¼å¼ï¼šiv(24) + authTag(32) + encrypted
  return iv.toString('hex') + authTag + encrypted;
}

/**
 * è§£å¯†æ•°æ®ï¼ˆAES-256-GCMï¼‰
 * @param {string} encryptedData - åŠ å¯†æ•°æ®ï¼ˆhexæ ¼å¼ï¼‰
 * @param {Buffer} sharedSecret - å…±äº«å¯†é’¥
 * @returns {string} æ˜æ–‡
 */
function decrypt(encryptedData, sharedSecret) {
  const iv = Buffer.from(encryptedData.slice(0, 24), 'hex');
  const authTag = Buffer.from(encryptedData.slice(24, 56), 'hex');
  const encrypted = encryptedData.slice(56);
  
  const decipher = crypto.createDecipheriv('aes-256-gcm', sharedSecret, iv);
  decipher.setAuthTag(authTag);
  
  let decrypted = decipher.update(encrypted, 'hex', 'utf8');
  decrypted += decipher.final('utf8');
  
  return decrypted;
}

/**
 * ç”Ÿæˆ ECDSA ç­¾åï¼ˆç”¨äºé˜²é‡æ”¾ï¼‰
 * @param {Object} data - è¦ç­¾åçš„æ•°æ®
 * @param {string} privateKey - ç§é’¥
 * @returns {string} ç­¾å
 */
async function signData(data, privateKey) {
  const wallet = new ethers.Wallet(privateKey);
  const message = JSON.stringify(data);
  // ä½¿ç”¨ signMessage ä¼šè‡ªåŠ¨æ·»åŠ ä»¥å¤ªåŠæ¶ˆæ¯å‰ç¼€ã€å“ˆå¸Œå¹¶ç­¾å
  return await wallet.signMessage(message);
}

// ==================== æµ‹è¯•æ­¥éª¤ ====================

/**
 * ä»æŒä¹…åŒ–æ•°æ®åŠ è½½æµ‹è¯•æ•°æ®ï¼ˆåŒ…å«å·²æ³¨å†Œçš„åŠ å¯†å…¬é’¥ï¼‰
 */
function loadPersistedTestData(persistedData) {
  logStep('ä»æŒä¹…åŒ–æ–‡ä»¶åŠ è½½æµ‹è¯•æ•°æ®');
  
  try {
    for (const role of ['elder', 'doctor']) {
      if (persistedData[role]) {
        // åŠ è½½ç”¨æˆ·åŸºæœ¬ä¿¡æ¯
        testData[role].eoaAddress = persistedData[role].eoaAddress;
        testData[role].eoaPrivateKey = persistedData[role].eoaPrivateKey;
        testData[role].smartAccount = persistedData[role].smartAccount;
        
        // âœ… ä½¿ç”¨ EOA å¯†é’¥å¯¹ä½œä¸ºåŠ å¯†å¯†é’¥å¯¹
        testData[role].publicKey = persistedData[role].encryptionPublicKey;
        testData[role].privateKey = persistedData[role].encryptionPrivateKey; // å®é™…ä¸Šå’Œ eoaPrivateKey ç›¸åŒ
        
        logSuccess(persistedData[role].role, 
          `å·²åŠ è½½ - SmartAccount: ${testData[role].smartAccount.substring(0, 10)}...`);
        logInfo(`   â””â”€ EOA: ${testData[role].eoaAddress.substring(0, 10)}...`);
        logInfo(`   â””â”€ åŠ å¯†å…¬é’¥: ${testData[role].publicKey.substring(0, 20)}...`);
      }
    }
    
    logSuccess('æ•°æ®åŠ è½½', 'ç”¨æˆ·æ•°æ®å·²ä»æ–‡ä»¶æˆåŠŸåŠ è½½');
    logInfo(`æ•°æ®åˆ›å»ºæ—¶é—´: ${persistedData.metadata?.createdAt || 'æœªçŸ¥'}`);
    logInfo(`æ³¨æ„ï¼šToken å°†åœ¨æ­¥éª¤0ä¸­é‡æ–°è·å–`);
    
    return true;
  } catch (error) {
    logError('æ•°æ®åŠ è½½', `å¤±è´¥: ${error.message}`);
    return false;
  }
}

// ==================== æ­¥éª¤0: ç”¨æˆ·ç™»å½• ====================

async function step0_loginUsers() {
  logStep('æ­¥éª¤0: ç”¨æˆ·ç™»å½•è·å– Token');
  
  for (const role of ['elder', 'doctor']) {
    const user = testData[role];
    
    if (!user.eoaAddress || !user.eoaPrivateKey) {
      logError(role, 'ç¼ºå°‘ EOA åœ°å€æˆ–ç§é’¥');
      throw new Error(`${role} ç¼ºå°‘å¿…è¦çš„ç™»å½•ä¿¡æ¯`);
    }
    
    logInfo(`${role} æ­£åœ¨ç™»å½•...`);
    
    // åˆ›å»ºç­¾å
    const wallet = new ethers.Wallet(user.eoaPrivateKey);
    const loginTime = new Date().toISOString();
    const message = `LOGIN_TIME:${loginTime}`;
    const signature = await wallet.signMessage(message);
    
    // å‘é€ç™»å½•è¯·æ±‚
    const result = await apiRequest('POST', '/api/auth/login', {
      eoa_address: user.eoaAddress,
      login_time: loginTime,
      signature: signature
    });
    
    if (!result.success) {
      logError(role, `ç™»å½•å¤±è´¥: ${JSON.stringify(result.error)}`);
      throw new Error(`${role} ç™»å½•å¤±è´¥`);
    }
    
    // ä¿å­˜ token
    user.token = result.data.data.token;
    
    logSuccess(role, 'ç™»å½•æˆåŠŸ');
    logInfo(`   â””â”€ Token: ${user.token.substring(0, 30)}...`);
    logInfo(`   â””â”€ EOA: ${user.eoaAddress.substring(0, 10)}...`);
    
    await sleep(300);
  }
  
  logSuccess('ç™»å½•', 'æ‰€æœ‰ç”¨æˆ·å·²æˆåŠŸç™»å½•');
  return true;
}

// ==================== æ­¥éª¤1: å»ºç«‹ WebSocket è¿æ¥ ====================

async function step1_connectWebSocket() {
  logStep('æ­¥éª¤1: å»ºç«‹ WebSocket è¿æ¥');
  
  const connections = [];
  
  for (const role of ['elder', 'doctor']) {
    const token = testData[role].token;
    const wsUrl = `${WS_URL}/ws/secure-exchange?token=${token}`;
    
    logInfo(`æ­£åœ¨è¿æ¥ ${role} çš„ WebSocket...`);
    
    const ws = new WebSocket(wsUrl);
    
    await new Promise((resolve, reject) => {
      const timeout = setTimeout(() => {
        reject(new Error('WebSocket è¿æ¥è¶…æ—¶'));
      }, 5000);
      
      ws.on('open', () => {
        clearTimeout(timeout);
        logSuccess(role, 'WebSocket è¿æ¥æˆåŠŸ');
        resolve();
      });
      
      ws.on('error', (error) => {
        clearTimeout(timeout);
        logError(role, `WebSocket è¿æ¥å¤±è´¥: ${error.message}`);
        reject(error);
      });
      
      ws.on('message', (data) => {
        try {
          const message = JSON.parse(data.toString());
          console.log(`ğŸ“¨ [${role} WSæ¶ˆæ¯]`, message.type);
          testData[role].receivedMessages.push(message);
          
          // å¤„ç†ä¸åŒç±»å‹çš„æ¶ˆæ¯
          if (message.type === 'encrypted_message') {
            logInfo(`${role} æ”¶åˆ°æ–°çš„åŠ å¯†æ¶ˆæ¯é€šçŸ¥`);
          } else if (message.type === 'message_acknowledged') {
            logInfo(`${role} æ”¶åˆ°æ¶ˆæ¯ç¡®è®¤é€šçŸ¥`);
          }
        } catch (error) {
          console.error(`è§£æ WebSocket æ¶ˆæ¯å¤±è´¥:`, error.message);
        }
      });
    });
    
    testData[role].wsConnection = ws;
    connections.push(ws);
  }
  
  logSuccess('WebSocket', 'æ‰€æœ‰ WebSocket è¿æ¥å·²å»ºç«‹');
  return true;
}

// ==================== æ­¥éª¤2: åŒ»ç”Ÿè·å–è€äººçš„åŠ å¯†å…¬é’¥å¹¶å‘é€åŠ å¯†æ¶ˆæ¯ ====================

async function step2_sendEncryptedData() {
  logStep('æ­¥éª¤2: åŒ»ç”Ÿè·å–è€äººçš„åŠ å¯†å…¬é’¥å¹¶å‘é€åŠ å¯†æ¶ˆæ¯');
  
  // 1. ä»åç«¯è·å–è€äººçš„é¢„æ³¨å†ŒåŠ å¯†å…¬é’¥
  logInfo(`æ­£åœ¨è·å–è€äºº(${testData.elder.smartAccount})çš„åŠ å¯†å…¬é’¥...`);
  
  const pubKeyResult = await apiRequest(
    'GET',
    `/api/secure-exchange/recipient-pubkey/${testData.elder.smartAccount}`,
    null,
    testData.doctor.token
  );
  
  if (!pubKeyResult.success) {
    logError('è·å–å…¬é’¥', 'å¤±è´¥');
    throw new Error('è·å–æ¥æ”¶è€…å…¬é’¥å¤±è´¥');
  }
  
  const recipientPublicKey = pubKeyResult.data.encryptionPublicKey;
  logSuccess('è·å–å…¬é’¥', `æˆåŠŸ`);
  logInfo(`   â””â”€ æ¥æ”¶è€…: ${pubKeyResult.data.recipientAddress.substring(0, 10)}...`);
  logInfo(`   â””â”€ åŠ å¯†å…¬é’¥: ${recipientPublicKey.substring(0, 30)}...`);
  
  // éªŒè¯å…¬é’¥æ˜¯å¦åŒ¹é…
  if (recipientPublicKey !== testData.elder.publicKey) {
    logWarning('æ³¨æ„ï¼šåç«¯è¿”å›çš„å…¬é’¥ä¸æœ¬åœ°åŠ è½½çš„å…¬é’¥ä¸ä¸€è‡´ï¼');
  }
  
  // 2. å‡†å¤‡æœè¯è®¡åˆ’æ•°æ®ï¼ˆæ˜æ–‡ï¼‰
  const medicationPlan = {
    patient_name: 'ç‹ç§€è‹±',
    plan_id: `PLAN-${Date.now()}`,
    medications: [
      {
        name: 'é˜¿å¸åŒ¹æ—è‚ æº¶ç‰‡',
        dosage: '100mg',
        frequency: 'æ¯æ—¥1æ¬¡',
        time: 'æ—©é¤å',
        duration: 'é•¿æœŸ'
      },
      {
        name: 'æ°¨æ°¯åœ°å¹³ç‰‡',
        dosage: '5mg',
        frequency: 'æ¯æ—¥1æ¬¡',
        time: 'æ—©ä¸Š',
        duration: 'é•¿æœŸ'
      },
      {
        name: 'äºŒç”²åŒèƒ',
        dosage: '500mg',
        frequency: 'æ¯æ—¥2æ¬¡',
        time: 'æ—©æ™šé¤å',
        duration: 'é•¿æœŸ'
      }
    ],
    special_instructions: 'è¯·æŒ‰æ—¶æœè¯ï¼Œå¦‚æœ‰ä¸é€‚è¯·åŠæ—¶è”ç³»åŒ»ç”Ÿ',
    doctor_name: 'æå»ºå›½',
    issue_date: new Date().toISOString()
  };
  
  const plaintext = JSON.stringify(medicationPlan);
  
  logInfo(`æœè¯è®¡åˆ’å†…å®¹:`);
  console.log(JSON.stringify(medicationPlan, null, 2));
  
  // 3. ä½¿ç”¨è€äººçš„å…¬é’¥åŠ å¯†æ•°æ®ï¼ˆECIESï¼‰
  logInfo(`æ­£åœ¨ä½¿ç”¨ ECIES åŠ å¯†æ•°æ®...`);
  
  const sharedSecret = deriveSharedSecret(
    testData.doctor.privateKey,
    recipientPublicKey
  );
  
  const encryptedData = encrypt(plaintext, sharedSecret);
  
  logInfo(`åŠ å¯†å®Œæˆï¼Œæ•°æ®é•¿åº¦: ${encryptedData.length} å­—ç¬¦`);
  
  // 4. ç”Ÿæˆç­¾åï¼ˆé˜²é‡æ”¾æ”»å‡»ï¼‰
  const timestamp = Date.now();
  const nonce = crypto.randomBytes(16).toString('hex');
  
  const signaturePayload = {
    recipient_address: testData.elder.smartAccount.toLowerCase(),  // âœ… ç»Ÿä¸€ä½¿ç”¨å°å†™åœ°å€
    timestamp,
    nonce,
    data_hash: crypto.createHash('sha256').update(encryptedData).digest('hex')
  };
  
  // ä½¿ç”¨ EOA ç§é’¥ç­¾å
  const signature = await signData(signaturePayload, testData.doctor.eoaPrivateKey);
  
  // 5. å‘é€åŠ å¯†æ¶ˆæ¯ï¼ˆæ— éœ€ sessionIdï¼‰
  const requestData = {
    recipientAddress: testData.elder.smartAccount,  // âœ… æ”¹ä¸º recipientAddress
    encryptedData: encryptedData,
    dataType: 'medication_schedule',
    signature,
    timestamp,
    nonce,
    metadata: {
      encryption_algorithm: 'ECIES-secp256k1-AES256-GCM',
      priority: 'high',
      requires_confirmation: true
    }
  };
  
  logInfo(`å‘é€åŠ å¯†æ¶ˆæ¯åˆ°æœåŠ¡å™¨...`);
  
  const result = await apiRequest(
    'POST',
    '/api/secure-exchange/send',
    requestData,
    testData.doctor.token
  );
  
  if (!result.success) {
    logError('å‘é€æ¶ˆæ¯', 'å¤±è´¥');
    throw new Error('å‘é€åŠ å¯†æ¶ˆæ¯å¤±è´¥');
  }
  
  const message = result.data;
  testData.messages.push(message);
  
  logSuccess('å‘é€æ¶ˆæ¯', `æ¶ˆæ¯ID: ${message.messageId || message.message_id}`);
  logInfo(`   â””â”€ æ¥æ”¶è€…: ${message.recipientAddress || message.recipient_address}`);
  logInfo(`   â””â”€ çŠ¶æ€: ${message.status}`);
  logInfo(`   â””â”€ è¿”å›çš„å…¬é’¥: ${(message.recipientPublicKey || 'æœªè¿”å›').substring(0, 30)}...`);
  
  // ç­‰å¾… WebSocket é€šçŸ¥
  await sleep(1000);
  
  // æ£€æŸ¥è€äººæ˜¯å¦æ”¶åˆ° WebSocket é€šçŸ¥
  const elderMessages = testData.elder.receivedMessages.filter(
    m => m.type === 'encrypted_message'
  );
  
  if (elderMessages.length > 0) {
    logSuccess('WebSocketé€šçŸ¥', 'è€äººæ”¶åˆ°æ–°æ¶ˆæ¯çš„å®æ—¶é€šçŸ¥');
  } else {
    logWarning('WebSocketé€šçŸ¥æœªæ”¶åˆ°ï¼ˆå¯èƒ½æ­£å¸¸ï¼‰');
  }
  
  return { message, plaintext };
}

// ==================== æ­¥éª¤3: è€äººè·å–å¾…å¤„ç†æ¶ˆæ¯ ====================

async function step3_getPendingMessages() {
  logStep('æ­¥éª¤3: è€äººè·å–å¾…å¤„ç†æ¶ˆæ¯');
  
  logInfo(`æŸ¥è¯¢è€äººçš„å¾…å¤„ç†æ¶ˆæ¯...`);
  
  const result = await apiRequest(
    'GET',
    '/api/secure-exchange/pending',
    null,
    testData.elder.token
  );
  
  if (!result.success) {
    logError('æŸ¥è¯¢æ¶ˆæ¯', 'å¤±è´¥');
    throw new Error('æŸ¥è¯¢å¾…å¤„ç†æ¶ˆæ¯å¤±è´¥');
  }
  
  const messages = result.data.messages || result.data.data || [];
  
  logSuccess('æŸ¥è¯¢æ¶ˆæ¯', `æ‰¾åˆ° ${messages.length} æ¡å¾…å¤„ç†æ¶ˆæ¯`);
  
  messages.forEach((msg, index) => {
    logInfo(`   ${index + 1}. æ¶ˆæ¯ID: ${msg.messageId || msg.message_id}`);
    logInfo(`      â””â”€ æ¥è‡ª: ${(msg.senderAddress || msg.sender_address).substring(0, 10)}...`);
    logInfo(`      â””â”€ æ•°æ®ç±»å‹: ${msg.dataType || msg.data_type}`);
    logInfo(`      â””â”€ æ¥æ”¶æ—¶é—´: ${new Date(msg.createdAt || msg.created_at).toLocaleString()}`);
  });
  
  return messages;
}

// ==================== æ­¥éª¤4: è€äººè§£å¯†å¹¶ç¡®è®¤æ¶ˆæ¯ ====================

async function step4_decryptAndAcknowledge(message, originalPlaintext) {
  logStep('æ­¥éª¤4: è€äººè§£å¯†å¹¶ç¡®è®¤æ¶ˆæ¯');
  
  // 1. è§£å¯†æ¶ˆæ¯
  logInfo(`æ­£åœ¨è§£å¯†æ¶ˆæ¯...`);
  
  // è·å–æ¶ˆæ¯ä¸­çš„åŠ å¯†æ•°æ®
  const encryptedData = message.encryptedData || message.encrypted_data;
  const senderAddress = message.senderAddress || message.sender_address;
  
  // è·å–å‘é€è€…çš„å…¬é’¥ï¼ˆé€šè¿‡åç«¯æŸ¥è¯¢æˆ–ä½¿ç”¨æœ¬åœ°å­˜å‚¨çš„ï¼‰
  const senderPublicKey = testData.doctor.publicKey; // ä½¿ç”¨æœ¬åœ°å­˜å‚¨çš„åŒ»ç”Ÿå…¬é’¥
  
  // ä½¿ç”¨è€äººçš„ç§é’¥æ´¾ç”Ÿå…±äº«å¯†é’¥
  const sharedSecret = deriveSharedSecret(
    testData.elder.privateKey,
    senderPublicKey
  );
  
  // è§£å¯†æ•°æ®
  const decryptedData = decrypt(encryptedData, sharedSecret);
  
  logSuccess('è§£å¯†', 'æˆåŠŸ');
  logInfo(`è§£å¯†åçš„å†…å®¹:`);
  console.log(JSON.stringify(JSON.parse(decryptedData), null, 2));
  
  // 2. éªŒè¯å†…å®¹å®Œæ•´æ€§
  if (decryptedData === originalPlaintext) {
    logSuccess('å†…å®¹éªŒè¯', 'è§£å¯†å†…å®¹ä¸åŸå§‹å†…å®¹å®Œå…¨åŒ¹é… âœ“');
  } else {
    logWarning('å†…å®¹éªŒè¯å¤±è´¥ï¼è§£å¯†å†…å®¹ä¸åŸå§‹å†…å®¹ä¸åŒ¹é…');
  }
  
  // 3. ç¡®è®¤æ¶ˆæ¯
  logInfo(`å‘é€ç¡®è®¤å›æ‰§...`);
  
  const ackResult = await apiRequest(
    'POST',
    '/api/secure-exchange/acknowledge',
    {
      messageId: message.messageId || message.message_id,
      status: 'received',
      acknowledged: true,
      acknowledgment_note: 'å·²æ”¶åˆ°æœè¯è®¡åˆ’ï¼Œæ„Ÿè°¢åŒ»ç”Ÿï¼'
    },
    testData.elder.token
  );
  
  if (!ackResult.success) {
    logError('ç¡®è®¤æ¶ˆæ¯', 'å¤±è´¥');
    throw new Error('ç¡®è®¤æ¶ˆæ¯å¤±è´¥');
  }
  
  logSuccess('ç¡®è®¤æ¶ˆæ¯', 'æˆåŠŸ');
  logInfo(`   â””â”€ æ¶ˆæ¯çŠ¶æ€: ${ackResult.data.status}`);
  
  // ç­‰å¾… WebSocket é€šçŸ¥
  await sleep(1000);
  
  // æ£€æŸ¥åŒ»ç”Ÿæ˜¯å¦æ”¶åˆ°ç¡®è®¤é€šçŸ¥
  const doctorNotifications = testData.doctor.receivedMessages.filter(
    m => m.type === 'message_acknowledged'
  );
  
  if (doctorNotifications.length > 0) {
    logSuccess('WebSocketé€šçŸ¥', 'åŒ»ç”Ÿæ”¶åˆ°ç¡®è®¤é€šçŸ¥');
  }
  
  return decryptedData;
}

// ==================== æ­¥éª¤5: æµ‹è¯•æ‘˜è¦ ====================

function step5_testSummary() {
  logStep('æ­¥éª¤5: æµ‹è¯•æ‘˜è¦');
  
  log('\nğŸ“Š æµ‹è¯•ç»Ÿè®¡:', 'cyan');
  log(`   â€¢ å‘é€æ¶ˆæ¯æ•°: ${testData.messages.length}`, 'cyan');
  log(`   â€¢ è€äººæ”¶åˆ° WS é€šçŸ¥æ•°: ${testData.elder.receivedMessages.length}`, 'cyan');
  log(`   â€¢ åŒ»ç”Ÿæ”¶åˆ° WS é€šçŸ¥æ•°: ${testData.doctor.receivedMessages.length}`, 'cyan');
  
  log('\nğŸ” åŠ å¯†æµ‹è¯•:', 'cyan');
  log(`   â€¢ å¯†é’¥è·å–: âœ…`, 'green');
  log(`   â€¢ ECIES åŠ å¯†: âœ…`, 'green');
  log(`   â€¢ ECIES è§£å¯†: âœ…`, 'green');
  log(`   â€¢ å†…å®¹å®Œæ•´æ€§: âœ…`, 'green');
  
  log('\nğŸ”„ æµç¨‹æµ‹è¯•:', 'cyan');
  log(`   â€¢ ä»åç«¯è·å–å…¬é’¥: âœ…`, 'green');
  log(`   â€¢ å‘é€åŠ å¯†æ¶ˆæ¯: âœ…`, 'green');
  log(`   â€¢ æ¥æ”¶å¹¶è§£å¯†: âœ…`, 'green');
  log(`   â€¢ æ¶ˆæ¯ç¡®è®¤: âœ…`, 'green');
  
  log('\nğŸ“¡ å®æ—¶é€šçŸ¥æµ‹è¯•:', 'cyan');
  log(`   â€¢ WebSocket è¿æ¥: âœ…`, 'green');
  log(`   â€¢ æ–°æ¶ˆæ¯é€šçŸ¥: ${testData.elder.receivedMessages.some(m => m.type === 'encrypted_message') ? 'âœ…' : 'âš ï¸'}`, 
    testData.elder.receivedMessages.some(m => m.type === 'encrypted_message') ? 'green' : 'yellow');
  log(`   â€¢ ç¡®è®¤é€šçŸ¥: ${testData.doctor.receivedMessages.some(m => m.type === 'message_acknowledged') ? 'âœ…' : 'âš ï¸'}`, 
    testData.doctor.receivedMessages.some(m => m.type === 'message_acknowledged') ? 'green' : 'yellow');
}

// ==================== æ¸…ç†èµ„æº ====================

function cleanup() {
  logStep('æ¸…ç†æµ‹è¯•èµ„æº');
  
  // å…³é—­ WebSocket è¿æ¥
  for (const role of ['elder', 'doctor']) {
    if (testData[role].wsConnection) {
      testData[role].wsConnection.close();
      logInfo(`å·²å…³é—­ ${role} çš„ WebSocket è¿æ¥`);
    }
  }
  
  logSuccess('æ¸…ç†', 'æµ‹è¯•èµ„æºå·²æ¸…ç†');
}

// ==================== ä¸»æµ‹è¯•æµç¨‹ ====================

async function runTest() {
  console.clear();
  log('\nâ•”â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•—', 'bright');
  log('â•‘       å®‰å…¨äº¤æ¢æœåŠ¡ E2E æµ‹è¯• - åŠ å¯†æœè¯è®¡åˆ’åˆ†å‘åœºæ™¯              â•‘', 'bright');
  log('â•‘               ï¼ˆåŸºäºé¢„æ³¨å†Œå…¬é’¥çš„ç®€åŒ–æµç¨‹ï¼‰                        â•‘', 'bright');
  log('â•šâ•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•', 'bright');
  
  try {
    // æ£€æŸ¥æµ‹è¯•æ•°æ®
    if (!testDataExists()) {
      logError('åˆå§‹åŒ–', 'æµ‹è¯•æ•°æ®æ–‡ä»¶ä¸å­˜åœ¨');
      logInfo('è¯·å…ˆè¿è¡Œ: node tests/setup-test-users.js');
      process.exit(1);
    }
    
    const persistedData = loadTestData();
    if (!validateTestData(persistedData)) {
      logError('åˆå§‹åŒ–', 'æµ‹è¯•æ•°æ®æ— æ•ˆ');
      process.exit(1);
    }
    
    // åŠ è½½æµ‹è¯•æ•°æ®
    loadPersistedTestData(persistedData);
    
    // è¿è¡Œæµ‹è¯•æ­¥éª¤ï¼ˆç®€åŒ–æµç¨‹ï¼Œæ— éœ€ä¼šè¯åå•†ï¼‰
    await step0_loginUsers(); // ç™»å½•è·å– token
    
    await step1_connectWebSocket(); // å»ºç«‹ WebSocket è¿æ¥
    
    const { message, plaintext } = await step2_sendEncryptedData(); // è·å–å…¬é’¥å¹¶å‘é€åŠ å¯†æ¶ˆæ¯
    
    const pendingMessages = await step3_getPendingMessages(); // è·å–å¾…å¤„ç†æ¶ˆæ¯
    
    // è§£å¯†å¹¶ç¡®è®¤ç¬¬ä¸€æ¡æ¶ˆæ¯
    if (pendingMessages.length > 0) {
      await step4_decryptAndAcknowledge(pendingMessages[0], plaintext);
    }
    
    step5_testSummary(); // æ˜¾ç¤ºæµ‹è¯•æ‘˜è¦
    
    // ç­‰å¾…ä¸€æ®µæ—¶é—´ä»¥æ¥æ”¶å¯èƒ½å»¶è¿Ÿçš„ WebSocket é€šçŸ¥
    logInfo('\nç­‰å¾…3ç§’ä»¥æ¥æ”¶å»¶è¿Ÿçš„ WebSocket é€šçŸ¥...');
    await sleep(3000);
    
    // æˆåŠŸå®Œæˆ
    log('\nâ•”â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•—', 'green');
    log('â•‘                      ğŸ‰ æ‰€æœ‰æµ‹è¯•é€šè¿‡ï¼                            â•‘', 'green');
    log('â•šâ•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•', 'green');
    
    cleanup();
    process.exit(0);
    
  } catch (error) {
    log('\nâ•”â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•—', 'red');
    log('â•‘                      âŒ æµ‹è¯•å¤±è´¥                                  â•‘', 'red');
    log('â•šâ•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•', 'red');
    logError('é”™è¯¯', error.message);
    log(`\nå †æ ˆä¿¡æ¯:\n${error.stack}`, 'red');
    
    cleanup();
    process.exit(1);
  }
}

// ==================== å…¥å£ ====================

if (require.main === module) {
  runTest();
}

module.exports = {
  runTest,
  testData
};
